--- a/template/template.wxss
+++ b/template/template.wxss
@@ -1342,3 +1342,134 @@ color:rgba(0,0,0,1);
   border: 1rpx solid RGBA(74, 144, 226, 1);
   color: white;
 }
+
+
+/* 交换名片 */
+.mask {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('http://xiangyu.wx.bronet.cn/images/bbg@2x.png');
+  background-size: 100% 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main_userGroup {
+  width: 100%;
+  height: 480rpx;
+  display: flex;
+  align-items: center;
+  margin-top: 80rpx;
+  box-sizing: border-box;
+  padding: 0rpx 35rpx;
+}
+
+.mask_main {
+  width: 600rpx;
+  height: 723rpx;
+  border-radius: 50rpx;
+  /* background-color: red; */
+  background-image: url('http://xiangyu.wx.bronet.cn/images/bbg01@2x.png');
+  background-size: 100% 100%;
+  position: relative;
+}
+
+.perSonl {
+  position: relative;
+  width: 300rpx;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.per_sonl {
+  width: 220rpx;
+  height: 220rpx;
+  border-radius: 50%;
+}
+
+.sex {
+  width: 64rpx;
+  height: 64rpx;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 250rpx;
+  left: 60%;
+}
+
+.per_title {
+  font-size: 40rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(255, 255, 255, 1);
+  text-align: center;
+  margin-top: 30rpx;
+}
+
+.startZuo,.birthday{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 200rpx;
+}
+
+.main_button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.changeCard, .sendGift {
+  width: 210rpx;
+  height: 80rpx;
+  border-radius: 40rpx;
+  font-size:30rpx;
+  text-align: center;
+  line-height: 80rpx;
+font-family:MicrosoftYaHei;
+color:rgba(202,0,252,1);
+  background: linear-gradient(to right, RGBA(254, 217, 51, 1), RGBA(252, 243, 52, 1));
+}
+
+.icon-baiyangzuo {
+  font-size: 120rpx;
+  color: rgba(255, 255, 255, 1);
+}
+.icon-shengri{
+  font-size: 120rpx;
+  color: rgba(255, 255, 255, 1);
+}
+
+.startTitle {
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(255, 255, 255, 1);
+}
+.main_botton{
+  box-sizing: border-box;
+  padding: 0rpx 50rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 42rpx;
+}
+
+.cendelcard{
+  width: 63.3rpx;
+  height: 63.3rpx;
+  /* background-color: red; */
+  position: absolute;right: -20rpx;
+  top: -20rpx;
+  border-radius:50%;
+  background-image: url('http://xiangyu.wx.bronet.cn/images/close@2x.png');
+  background-size: 100% 100%;
+}
