--- a/pages/Release/experience_res/experience_res.wxml
+++ b/pages/Release/experience_res/experience_res.wxml
@@ -93,92 +93,9 @@
 </view>
 
 
- <view class='giftGroup' wx:if="{{gift}}" bindtap='hidegift'>
-  <view class='giftList'>
-    <view class='giftTab'>
-      <view class='Tab_item Tab_itemActive'>高级礼物</view>
-      <view class='Tab_item'>中级礼物</view>
-      <view class='Tab_item' style='border:none'>初级礼物</view>
-    </view>
-    <scroll-view class='giftscrollView' scroll-y>
-      <view class='list_item'>
-        <view class='item_gift item_giftActive'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift01@2x.png'></image>
-        </view>
-        <view class='item_title'>棒棒糖X10</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift02@2x.png'></image>
-        </view>
-        <view class='item_title'>爱心甜点X10</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift03@2x.png'></image>
-        </view>
-        <view class='item_title'>棉花糖X10</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift04@2x.png'></image>
-        </view>
-        <view class='item_title'>冰淇淋X10</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift05@2x.png'></image>
-        </view>
-        <view class='item_title'>小蛋糕X10</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift06@2x.png'></image>
-        </view>
-        <view class='item_title'>高级跑车X1</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift07@2x.png'></image>
-        </view>
-        <view class='item_title'>火箭X1</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift08@2x.png'></image>
-        </view>
-        <view class='item_title'>享遇币X1</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift08@2x.png'></image>
-        </view>
-        <view class='item_title'>享遇币X1</view>
-      </view>
-      <view class='list_item'>
-        <view class='item_gift'>
-            <image src='http://xiangyu.wx.bronet.cn/images/gift08@2x.png'></image>
-        </view>
-        <view class='item_title'>享遇币X1</view>
-      </view>
-    </scroll-view>
-    <view class='send'>
-      赠送
-    </view>
-  </view>
+ 
 
-  <!-- <view class='noGift'>
-    <view class='notice_res'>
-      <text class='notice_res_title'>没有礼物</text>
-      <text class='notice_res_main'>您的背包里没有礼物，请前往礼物商城购买</text>
-    </view>
-    <view class='notice_Group'>
-      <view class='cendel'>取消</view>
-      <view class='goshop'>前往礼物商城</view>
-    </view>
-  </view> -->
-</view> 
-
+<template is='giftGroup' data="{{...giftGroup}}"></template>
 <template is='changeCard' data="{{...changeCard}}"></template>
 
 
