--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -20,7 +20,7 @@
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" class='mySwiper'>
     <block wx:for="{{imgUrls}}" wx:key="index">
       <swiper-item>
-        <image src="{{item}}" class="slide-image" width="355" height="150" />
+        <image src="{{item}}" class="slide-image" width="355" height="150" lazy-load='true' />
       </swiper-item>
     </block>
   </swiper>
